add twitter info SEO

--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ summarylength = 8
   background_image = "images/backgrounds/hero-background.png"
   dateFormat = "26 FEB 1994"
   # Meta data
-  description = "frontfabi | Tech, design e Marketing"
+  description = "Desenvolvedora, mercadóloga e designer. Trabalhando por mais inclusão no mercado de tecnologia"
   author = "Fabi Rodrigues"
   # Google Analitycs
   googleAnalitycsID = "Your ID"
